--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
                 if(sendingBlock.inputList[idx].fieldRow[1].text_ == property){ //for optional fields (-) precedes
                     return sendingBlock.inputList[idx].connection.targetConnection.sourceBlock_;
                 }
-                //use input.conection when we find
-
             }
         }
 
@@ -90,19 +88,25 @@
                 let property = topLevelSchema.properties[propertyName];
                 if(property.apiCreationStrategy == 'childFirstBodyId' && property['$ref'] != undefined){
                     let block = childBlockFromBlock(propertyName, sendingBlock);
+                    //TODO need to send the actual parentBlock in case we do parent -> grandchild -> child order.
                     var type = block.type;
                     if(schema[type] == undefined){ //make sure we have schema ready.
                         loadJsonForRequest(type);
                     }
                     childFirstBodyIdStrategy(block, type);
                     let obj = Blockly.JSON.generalBlockToObj(block);
-                    sendSingleRequest(JSON.stringify(obj), type, propertyName);
+                    sendSingleRequest(JSON.stringify(obj), type, propertyName, "");
                 }
             }
         }
 
-        function parentFirstRouteIdStrategy(sendingBlock, topLevelSchema, rootType){
-            //TODO don't send these fields in the parent create body
+        function createDirectChildren(children, childTypes, childRoutePrefix){
+            for(var i in children){
+                if(schema[childTypes[i]] == undefined){ //make sure we have schema ready.
+                    loadJsonForRequest(childTypes[i]);
+                }
+                sendSingleRequest(JSON.stringify(children[i]), childTypes[i], "parentFirst", childRoutePrefix);
+            }
         }
 
         function pullUpIdsFromChildren(obj, idsFromChildren){
@@ -115,17 +119,42 @@
             return JSON.stringify(tmpJson);
         }
 
-        function sendSingleRequest(obj, type, propertyOrParent){ //if last param undefined, this is a parent request.
-            if(schema[type].endpoint != undefined){
+        function removeChildrenFromParentBody(obj, type, children, childTypes){
+            var tmpJson = JSON.parse(obj);
+            let mySchema = schema[type];
+            var idx = 0;
+            for(var property in mySchema.properties){
+                let elem = mySchema.properties[property];
+                if(elem.apiCreationStrategy == 'parentFirstRouteId' && elem['$ref'] != undefined){
+                    children[idx] = tmpJson[property];
+                    childTypes[idx] = elem['$ref'].replace(".json","");
+                    tmpJson[property] = undefined;
+                    idx+=1;
+                }
+            }
+            return JSON.stringify(tmpJson);
+        }
+
+        function sendSingleRequest(payload, type, propertyOrParent, routePrefix){ //if last param undefined, this is a parent request.
+            console.log("initiating a request for " + type);
+            childFirstBodyIdStrategy(rootBlock, schema[type]);
+            var parentIdForChildRequests = "";
+            let origType = type;
+            if(schema[type] != undefined && schema[type].endpoint != undefined){
                 console.log("Detected an overridden endpoint mapping");
                 type = schema[type].endpoint;
             }
             let xhttp = new XMLHttpRequest();
-            let fullRoute = serverConfig.baseUrl + "/" + type;
+            let fullRoute = serverConfig.baseUrl + routePrefix + "/" + type;
             xhttp.onreadystatechange = function() {
                 if (this.readyState == 4) {
-                    if(propertyOrParent == undefined){ //root request
+                    if(propertyOrParent == undefined){ //root request 
+                        //TODO remove server mocking on next line, use `this.responseText` for mocked
                         document.getElementById('response_area').value = "status: " + this.status + "\nresponse: " + this.responseText;
+                    }
+                    if(propertyOrParent == "parentFirst"){ //add the child response after.
+                        //TODO remove server mocking on next line, use `this.responseText` for mocked
+                        document.getElementById('response_area').value = document.getElementById('response_area').value + "status: " + this.status + "\nresponse: " + this.responseText;
                     }
                     else{
                         //TODO remove server mocking on next line, use `this.responseText` for mocked
@@ -133,6 +162,8 @@
                         idsFromChildren[propertyOrParent] = JSON.parse(mocked)['id'];
                         //idsFromChildren[propertyOrParent] = JSON.parse(this.responseText)['id'];
                     }
+                    let mocked = "{\"id\": \"3302372d-a590-4c4b-b3e2-c070025a3b8e\"}";
+                    parentIdForChildRequests = JSON.parse(mocked)['id'];
                 }
             };
             if(serverConfig.authType == "basic"){
@@ -151,24 +182,37 @@
                 xhttp.open("POST", fullRoute, false);
             }
             xhttp.setRequestHeader("Content-type", "application/json");
-            let finalObj = pullUpIdsFromChildren(obj, idsFromChildren);
+
+            //Modify bodies for child/parent handling prior to sending request.
+
+            var tmpObj = pullUpIdsFromChildren(payload, idsFromChildren);
+
+            var children = [];
+            var childTypes = [];
+            let finalObj = removeChildrenFromParentBody(tmpObj, origType, children, childTypes);
+
             xhttp.send(finalObj);
-            //TODO parentFirstRouteIdStrategy() implementation;
+            
+            var childRoutePrefix = "";
+            if(children.length > 0){
+                childRoutePrefix = routePrefix + "/" + type + "/" + parentIdForChildRequests;
+            }
+            createDirectChildren(children, childTypes, childRoutePrefix);
         }
 
+        var rootBlock;
         function sendRequests() {
             let payload = document.getElementById('json_area').value;
             let topBlocks = Blockly.getMainWorkspace().getTopBlocks(false);
-            let sendingBlock = topBlocks[0].childBlocks_[0];
+            rootBlock = topBlocks[0].childBlocks_[0];
             if(serverConfig == {}){
                 loadConfig();
             }
-            var rootType = sendingBlock.type;
+            var rootType = rootBlock.type;
             if(schema[rootType] == undefined){
-                loadJsonForRequest(sendingBlock.type);
+                loadJsonForRequest(rootBlock.type);
             }
-            childFirstBodyIdStrategy(sendingBlock, schema[rootType]);
-            sendSingleRequest(payload, rootType, undefined);
+            sendSingleRequest(payload, rootType, undefined, "");
         }
 
         function updateJSONarea() {
