This is the array update. We've got a load of nice arrays over here free to a good home.

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <category name="Input" colour="210" >
             <block type="var"></block>
             <block type="dictionary"></block>
-            <block type="array"></block>
+            <block type="dynarray"></block>
             <block type="number"></block>
             <block type="string"></block>
             <block type= "true_false"></block>
@@ -283,6 +283,11 @@
             <block type= "map_filter"></block>
             <block type= "merge"></block>
             <block type= "InMiss"></block>
+            <block type= "string_array"></block>
+            <block type= "number_array"></block>
+            <block type= "product_array"></block>
+            <block type= "location_array"></block>
+            <block type= "employee_array"></block>
         </category>
 
         <category name="String" colour="20">
