Added ajv live schema validation. Fixed readme and renamed app. Renamed bool blocks to boolean so that schema will work

--- a/public/index.html
+++ b/public/index.html
@@ -60,10 +60,10 @@
             <block type="start"></block>
             <block type="string"></block>
             <block type= "string_array"></block>
-            <block type="number"></block>
+            <block type= "number"></block>
             <block type= "number_array"></block>
-            <block type= "bool"></block>
-            <block type= "bool_array"></block>
+            <block type= "boolean"></block>
+            <block type= "boolean_array"></block>
         </category>
 
         <category name="Custom Objects" colour="20">
@@ -83,10 +83,9 @@
     </xml>
 
     <div style="margin-left: 74%; width: 24%; height: 100%">
-        <button onclick='interpretJSONarea()'>interpret JSON from the textarea below</button>
         <button onclick='sendRequests()'>POST</button>
-        <textarea id=json_area style="height: 95%; width: 100%"></textarea>
-        <textarea id=response_area style="height: 95%; width: 100%"></textarea>
+        <textarea id=json_area style="height: 60%; width: 100%"></textarea>
+        <textarea id=response_area style="height: 40%; width: 100%"></textarea>
     </div>
   </div>
 
