Upgrade to a tracked blockly version (Nov 2018), add schema validations for arrays and array contents, add browser persistence to minimize data loss, append readme

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,7 @@
         <textarea id=full_route readonly="true" style="height: 11%; width: 100%"></textarea>
         <textarea id=json_area style="height: 60%; width: 100%"></textarea>
         <textarea id=response_area style="height: 35%; width: 100%"></textarea>
+        <button id=load_disk onclick='loadFromStorage()'>Load Saved</button>
     </div>
   </div>
 
