--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,26 @@
     <meta charset="utf-8">
     <title>A Blockly-based visual editor for JSON structures.</title>
 
-    <script type="text/javascript" src="blockly_compressed.js"></script>
-    <!-- context menu in English: -->
-    <script type="text/javascript" src="msg/js/en.js"></script>
+    <!-- Modern Blockly imports -->
+    <script type="text/javascript" src="https://unpkg.com/blockly@latest/blockly_compressed.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/blockly@latest/javascript_compressed.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/blockly@latest/blocks_compressed.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/blockly@latest/msg/en.js"></script>
 
-    <!-- a simple yet very practical widget: -->
+    <!-- Custom field and extensions -->
     <script type="text/javascript" src="field_textbutton.js"></script>
 
-    <!-- override/extend some Blockly code (menu-based building code): -->
+    <!-- Core Blockly extensions and blocks -->
     <script type="text/javascript" src="menuly_override.js"></script>
-
-    <!-- blocks to build JSON structures from: -->
     <script type="text/javascript" src="menuly_blocks.js"></script>
-
-    <!-- transforming a blockly diagram into a JSON string: -->
     <script type="text/javascript" src="menuly_codegen.js"></script>
-
-    <!-- building a blockly diagram from a JSON string: -->
     <script type="text/javascript" src="menuly_2blocks.js"></script>
 
-    <!-- Dynamic block loading based on tenant schemas -->
+    <!-- Dynamic block loading -->
     <script type="text/javascript" src="dynamic-blocks.js"></script>
 
-    <!-- Clientsided javascript cannot loop over a folder so all schemas must be individualy registered in dom-->
+    <!-- Keyboard navigation -->
+    <script type="text/javascript" src="keyboard-navigation.js"></script>
 
     <script src='bundle.js'></script>
     
@@ -40,6 +37,8 @@
             font-size: 140%;
             padding-left: 500px;
         }
+        
+
     </style>
 </head>
 <body>
