Add api endpoints that can route within the lambda by adding to the body. need to use AWS for this not AWS_PROXY I think

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,13 @@
     <!-- Custom field and extensions -->
     <script type="text/javascript" src="field_textbutton.js"></script>
 
-    <!-- Core Blockly extensions and blocks -->
+    <!-- Core Blockly extensions and primitive blocks -->
     <script type="text/javascript" src="menuly_override.js"></script>
     <script type="text/javascript" src="menuly_blocks.js"></script>
-    <script type="text/javascript" src="menuly_codegen.js"></script>
     <script type="text/javascript" src="menuly_2blocks.js"></script>
 
-    <!-- Dynamic block loading -->
-    <script type="text/javascript" src="dynamic-blocks.js"></script>
+    <!-- Dynamic block loading from S3, and generates JSON for all object types-->
+    <script type="text/javascript" src="menuly_codegen.js"></script>
 
     <!-- Keyboard navigation -->
     <script type="text/javascript" src="keyboard-navigation.js"></script>
