Fixes for json validations and json updates on custom blocks and bundling. unfortunately broke the population of subobjects with this for now but entire schemas are loading in nicely and need some additional cleaning

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,9 @@
     <!-- Keyboard navigation -->
     <script type="text/javascript" src="keyboard-navigation.js"></script>
 
-    <script src='bundle.js'></script>
-    
+    <!-- Main application logic (bundle.js contains main.js functions) -->
+    <script type="text/javascript" src="bundle.js"></script>
+
     <style>
         body {
             background-color: #fff;
