--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>A Blockly-based visual editor for JSON structures.</title>
 
+    <!-- AJV for schema validation -->
+    <script type="text/javascript" src="https://unpkg.com/ajv@8.5.0/dist/ajv.min.js"></script>
+    
     <!-- Modern Blockly imports -->
     <script type="text/javascript" src="https://unpkg.com/blockly@latest/blockly_compressed.js"></script>
     <script type="text/javascript" src="https://unpkg.com/blockly@latest/javascript_compressed.js"></script>
