refactor for maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
     <script type="text/javascript" src="https://unpkg.com/blockly@latest/msg/en.js"></script>
 
     <!-- Custom field and extensions -->
-    <script type="text/javascript" src="field_textbutton.js"></script>
+    <script type="text/javascript" src="button-field.js"></script>
 
     <!-- Core Blockly extensions and primitive blocks -->
-    <script type="text/javascript" src="menuly_override.js"></script>
-    <script type="text/javascript" src="menuly_blocks.js"></script>
-    <script type="text/javascript" src="menuly_2blocks.js"></script>
+    <script type="text/javascript" src="block-extensions.js"></script>
+    <script type="text/javascript" src="block-definitions.js"></script>
+    <script type="text/javascript" src="json-workspace-converter.js"></script>
 
     <!-- Dynamic block loading from S3, and generates JSON for all object types-->
-    <script type="text/javascript" src="menuly_codegen.js"></script>
+    <script type="text/javascript" src="schema-loader.js"></script>
 
     <!-- Keyboard navigation -->
     <script type="text/javascript" src="keyboard-navigation.js"></script>
