Add llm tools to frontend and a new schema-preload endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,8 @@
         <label>Tree Rebuild (overwrites workspace!)</label>
         <button id=load_disk onclick='loadFromStorage()'>Load Browser Save</button>
         <button id=reverse onclick='loadFromJson()'>Rebuild tree from JSON pane</button>
+        <br/><br/>
+        <a href="llm-tools.html" style="color: #4CAF50; text-decoration: none; font-weight: bold;">🤖 AI Tools</a>
     </div>
   </div>
 
