fix how requests to backend are streuctured

--- a/public/llm-preload.html
+++ b/public/llm-preload.html
@@ -161,8 +161,10 @@
                 },
                 body: JSON.stringify({
                     type: 'llm-preload',
-                    extension: tenant,
-                    prompt: prompt
+                    body: {
+                        extension: tenant,
+                        prompt: prompt
+                    }
                 })
             });
                 
