--- a/public/llm-preload.html
+++ b/public/llm-preload.html
@@ -213,12 +213,13 @@
                         <pre style="background: white; padding: 10px; border-radius: 3px; overflow-x: auto;">${JSON.stringify(jsonObject, null, 2)}</pre>
                         <p><strong>Redirect URL:</strong></p>
                         <pre style="background: #f0f0f0; padding: 10px; border-radius: 3px; overflow-x: auto; font-size: 12px;">${redirectUrl}</pre>
-                        <p>Auto-redirecting in <span id="countdown">3</span> seconds...</p>
+                        <p><strong>Debug Info:</strong> Stored in localStorage as 'llm-preload-debug'</p>
+                        <p>Auto-redirecting in <span id="countdown">15</span> seconds...</p>
                     `;
                     success.style.display = 'block';
                     
                     // Countdown timer
-                    let countdown = 3;
+                    let countdown = 15;
                     const countdownElement = document.getElementById('countdown');
                     const countdownInterval = setInterval(() => {
                         countdown--;
@@ -239,6 +240,7 @@
                     console.log('Extracted jsonObject:', jsonObject);
                     console.log('Extracted rootSchema:', rootSchema);
                     console.log('Redirect URL:', redirectUrl);
+                    console.log('Debug info stored in localStorage as "llm-preload-debug"');
                     console.log('================================');
                     
                 } else {
