connect theme switcher to workspace

--- a/public/llm-schema-generator.html
+++ b/public/llm-schema-generator.html
@@ -10,16 +10,18 @@
             max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #1e1e1e;
+            color: #ffffff;
         }
         .container {
-            background: white;
+            background: #2d2d30;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            border: 1px solid #444;
         }
         h1 {
-            color: #333;
+            color: #ffffff;
             text-align: center;
             margin-bottom: 30px;
         }
@@ -43,15 +45,17 @@
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
-            color: #555;
+            color: #cccccc;
         }
         input[type="text"], input[type="number"], textarea {
             width: 100%;
             padding: 12px;
-            border: 2px solid #ddd;
+            border: 2px solid #555;
             border-radius: 5px;
             font-size: 16px;
             box-sizing: border-box;
+            background: #3c3c3c;
+            color: #ffffff;
         }
         input[type="text"]:focus, input[type="number"]:focus, textarea:focus {
             outline: none;
