--- a/public/llm-tools.html
+++ b/public/llm-tools.html
@@ -10,16 +10,18 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #1e1e1e;
+            color: #ffffff;
         }
         .container {
-            background: white;
+            background: #2d2d30;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            border: 1px solid #444;
         }
         h1 {
-            color: #333;
+            color: #ffffff;
             text-align: center;
             margin-bottom: 30px;
         }
@@ -30,28 +32,28 @@
             margin-bottom: 30px;
         }
         .tool-card {
-            background: #f8f9fa;
+            background: #3c3c3c;
             padding: 25px;
             border-radius: 10px;
             text-align: center;
-            border: 2px solid #e9ecef;
+            border: 2px solid #555;
             transition: all 0.3s ease;
             cursor: pointer;
             text-decoration: none;
-            color: inherit;
+            color: #ffffff;
         }
         .tool-card:hover {
             border-color: #4CAF50;
             transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
         .tool-card h3 {
             margin: 0 0 15px 0;
-            color: #333;
+            color: #ffffff;
         }
         .tool-card p {
             margin: 0 0 20px 0;
-            color: #666;
+            color: #cccccc;
             line-height: 1.5;
         }
         .tool-icon {
